fixes issue where spacing was inconsistent in logo

--- a/wwwroot/css/main.css
+++ b/wwwroot/css/main.css
@@ -14,9 +14,10 @@ body {
     background-color: #121212;
     display: flex;
     align-items: center;
-    top: 15px;
+    top: 0px;
     Height: 70px;
     width: 100%;
+    border-top: 1px solid black;
 }
 
 .logo-div {
@@ -61,10 +62,15 @@ body {
     box-shadow: 0px 5px 5px 0px rgba(0,0,0,1);
 }
 
+.nav-bar ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
 .menu-wrapper {
     margin: auto;
     width: 1200px;
-    height:71px;
 }
 
 .menu-link {
